fix button spacing

--- a/mystyle.css
+++ b/mystyle.css
@@ -66,7 +66,6 @@ a {
     padding-right: 30vw;
 }
 .tab {
-    overflow: hidden;
     border: 1px solid lightblue;
     background-color: lightblue;
   }
@@ -100,4 +99,7 @@ td {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 500px;
+}
+.tablinks {
+    margin-top: -42px;
 }
